Final version for Integration